--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^1.0.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.3.5",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "framer-motion": "^10.12.2",
+    "js-cookie": "^3.0.1",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-infinite-scroller": "^1.2.6",
+    "react-query": "^3.39.3",
+    "react-toastify": "^9.1.2",
     "tailwindcss": "3.3.1"
   }
 }
