--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^10.12.2",
     "js-cookie": "^3.0.1",
     "next": "13.3.0",
+    "nookies": "^2.5.2",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
