--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-infinite-scroller": "^1.2.6",
     "react-query": "^3.39.3",
     "react-toastify": "^9.1.2",
+    "socket.io-client": "^4.6.1",
     "tailwindcss": "3.3.1"
   }
 }
