--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.8.0",
     "react-infinite-scroller": "^1.2.6",
     "react-query": "^3.39.3",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.2",
     "socket.io-client": "^4.6.1",
     "tailwindcss": "3.3.1"
