--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.8.0",
     "react-infinite-scroller": "^1.2.6",
     "react-query": "^3.39.3",
