--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "nookies": "^2.5.2",
     "postcss": "8.4.21",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.8.0",
     "react-infinite-scroller": "^1.2.6",
     "react-query": "^3.39.3",
+    "react-quill": "^2.0.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.2",
     "socket.io-client": "^4.6.1",
