--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "next": "13.3.0",
     "nookies": "^2.5.2",
     "postcss": "8.4.21",
-    "react": "18.2.0",
+    "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
